<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1"
    tools:context=".data.MainActivity" >

    <TextView
        android:id="@+id/txtView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/txtEdit_Email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittxt_rounded_corner"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:gravity="center"
        android:ems="10"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/txtEdit_firstName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittxt_rounded_corner"
        android:inputType="text"
        android:hint="@string/first_name"
        android:gravity="center"
        android:ems="10"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/txtEdit_LastName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittxt_rounded_corner"
        android:inputType="text"
        android:hint="@string/last_name"
        android:gravity="center"
        android:ems="10"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/txtEdit_shopID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittxt_rounded_corner"
        android:inputType="numberDecimal"
        android:hint="@string/shop_id"
        android:gravity="center"
        android:ems="10"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/Btn_InputTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:background="@drawable/btn_input"
        android:padding="5dp"
        android:text="@string/input"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>